--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                     <p class="card-text">Welcome to our website.</p>
                 </div>
                 <div class="card-body">
+                    <p class="card-title font-normal">Buy heroin.</p>
                     <p class="card-text">
                         Lorem ipsum dolor sit, amet consectetur adipisicing
                         elit. Nulla, suscipit.
@@ -36,6 +37,7 @@
                     <p class="card-text">Welcome to our website.</p>
                 </div>
                 <div class="card-body">
+                    <p class="card-title">Buy heroin.</p>
                     <p class="card-text">
                         Lorem ipsum dolor sit, amet consectetur adipisicing
                         elit. Nulla, suscipit.
@@ -51,6 +53,7 @@
                     <p class="card-text">Welcome to our website.</p>
                 </div>
                 <div class="card-body">
+                    <p class="card-title">Buy heroin.</p>
                     <p class="card-text">
                         Lorem ipsum dolor sit, amet consectetur adipisicing
                         elit. Nulla, suscipit.
@@ -66,6 +69,7 @@
                     <p class="card-text">Welcome to our website.</p>
                 </div>
                 <div class="card-body">
+                    <p class="card-title">Buy heroin.</p>
                     <p class="card-text">
                         Lorem ipsum dolor sit, amet consectetur adipisicing
                         elit. Nulla, suscipit.
@@ -81,6 +85,7 @@
                     <p class="card-text">Welcome to our website.</p>
                 </div>
                 <div class="card-body">
+                    <p class="card-title">Buy heroin.</p>
                     <p class="card-text">
                         Lorem ipsum dolor sit, amet consectetur adipisicing
                         elit. Nulla, suscipit.
@@ -96,6 +101,7 @@
                     <p class="card-text">Welcome to our website.</p>
                 </div>
                 <div class="card-body">
+                    <p class="card-title">Buy heroin.</p>
                     <p class="card-text">
                         Lorem ipsum dolor sit, amet consectetur adipisicing
                         elit. Nulla, suscipit.
@@ -111,6 +117,7 @@
                     <p class="card-text">Welcome to our website.</p>
                 </div>
                 <div class="card-body">
+                    <p class="card-title">Buy heroin.</p>
                     <p class="card-text">
                         Lorem ipsum dolor sit, amet consectetur adipisicing
                         elit. Nulla, suscipit.
