--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body style="background: #191919;">
         <div
-            class="container p-5 text-center color-default font-bold size-5 bg-transparent-primary"
+            class="container py-5 py-n5 text-center color-default font-bold font-vw4 bg-transparent-primary"
         >
             <p>Welcome to Firefly CSS Framework</p>
         </div>
@@ -16,115 +16,41 @@
         <h4 class="color-default container py-5 py-n5">Cards:</h4>
 
         <div class="container">
-            <div class="card">
-                <div class="card-header">
-                    <p class="card-text">Welcome to our website.</p>
+            <div class="row">
+                <div class="col-6">
+                    <div class="card">
+                        <div class="card-header">
+                            <p class="card-text">Welcome to our website.</p>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-title font-normal">Buy heroin.</p>
+                            <p class="card-text">
+                                Lorem ipsum dolor sit, amet consectetur
+                                adipisicing elit. Nulla, suscipit.
+                            </p>
+                        </div>
+                        <div class="card-footer">
+                            <p class="card-text">3 hours ago</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="card-body">
-                    <p class="card-title font-normal">Buy heroin.</p>
-                    <p class="card-text">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing
-                        elit. Nulla, suscipit.
-                    </p>
-                </div>
-                <div class="card-footer">
-                    <p class="card-text">3 hours ago</p>
-                </div>
-            </div>
 
-            <div class="card card-primary my-5">
-                <div class="card-header">
-                    <p class="card-text">Welcome to our website.</p>
-                </div>
-                <div class="card-body">
-                    <p class="card-title">Buy heroin.</p>
-                    <p class="card-text">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing
-                        elit. Nulla, suscipit.
-                    </p>
-                </div>
-                <div class="card-footer">
-                    <p class="card-text">3 hours ago</p>
-                </div>
-            </div>
-
-            <div class="card-info my-5">
-                <div class="card-header">
-                    <p class="card-text">Welcome to our website.</p>
-                </div>
-                <div class="card-body">
-                    <p class="card-title">Buy heroin.</p>
-                    <p class="card-text">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing
-                        elit. Nulla, suscipit.
-                    </p>
-                </div>
-                <div class="card-footer">
-                    <p class="card-text">3 hours ago</p>
-                </div>
-            </div>
-
-            <div class="card-danger my-5">
-                <div class="card-header">
-                    <p class="card-text">Welcome to our website.</p>
-                </div>
-                <div class="card-body">
-                    <p class="card-title">Buy heroin.</p>
-                    <p class="card-text">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing
-                        elit. Nulla, suscipit.
-                    </p>
-                </div>
-                <div class="card-footer">
-                    <p class="card-text">3 hours ago</p>
-                </div>
-            </div>
-
-            <div class="card-warning my-5">
-                <div class="card-header">
-                    <p class="card-text">Welcome to our website.</p>
-                </div>
-                <div class="card-body">
-                    <p class="card-title">Buy heroin.</p>
-                    <p class="card-text">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing
-                        elit. Nulla, suscipit.
-                    </p>
-                </div>
-                <div class="card-footer">
-                    <p class="card-text">3 hours ago</p>
-                </div>
-            </div>
-
-            <div class="card-success my-5">
-                <div class="card-header">
-                    <p class="card-text">Welcome to our website.</p>
-                </div>
-                <div class="card-body">
-                    <p class="card-title">Buy heroin.</p>
-                    <p class="card-text">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing
-                        elit. Nulla, suscipit.
-                    </p>
-                </div>
-                <div class="card-footer">
-                    <p class="card-text">3 hours ago</p>
-                </div>
-            </div>
-
-            <div class="card-dark my-5">
-                <div class="card-header">
-                    <p class="card-text">Welcome to our website.</p>
-                </div>
-                <div class="card-body">
-                    <p class="card-title">Buy heroin.</p>
-                    <p class="card-text">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing
-                        elit. Nulla, suscipit.
-                    </p>
-                </div>
-                <div class="card-footer">
-                    <p class="card-text">3 hours ago</p>
+                <div class="col-6">
+                    <div class="card-dark my-5">
+                        <div class="card-header">
+                            <p class="card-text">Welcome to our website.</p>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-title">Buy heroin.</p>
+                            <p class="card-text">
+                                Lorem ipsum dolor sit, amet consectetur
+                                adipisicing elit. Nulla, suscipit.
+                            </p>
+                        </div>
+                        <div class="card-footer">
+                            <p class="card-text">3 hours ago</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
