--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-6">
+                <div class="col-4">
                     <div class="card">
                         <div class="card-header">
                             <p class="card-text">Welcome to our website.</p>
@@ -35,8 +35,26 @@
                     </div>
                 </div>
 
-                <div class="col-6">
-                    <div class="card-dark my-5">
+                <div class="col-4">
+                    <div class="card-dark">
+                        <div class="card-header">
+                            <p class="card-text">Welcome to our website.</p>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-title">Buy heroin.</p>
+                            <p class="card-text">
+                                Lorem ipsum dolor sit, amet consectetur
+                                adipisicing elit. Nulla, suscipit.
+                            </p>
+                        </div>
+                        <div class="card-footer">
+                            <p class="card-text">3 hours ago</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-4">
+                    <div class="card-danger">
                         <div class="card-header">
                             <p class="card-text">Welcome to our website.</p>
                         </div>
