--- a/index.html
+++ b/index.html
@@ -4,72 +4,16 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Firefly CSS Framework</title>
+        <link rel="shortcut icon" href="./img/favicon.png" />
         <link rel="stylesheet" href="./css/main.min.css" />
     </head>
-    <body style="background: #191919;">
-        <div
-            class="container py-5 py-n5 text-center color-default font-bold font-vw4 bg-transparent-primary"
-        >
-            <p>Welcome to Firefly CSS Framework</p>
-        </div>
-
-        <h4 class="color-default container py-5 py-n5">Cards:</h4>
-
+    <body>
         <div class="container">
             <div class="row">
-                <div class="col-4">
-                    <div class="card">
-                        <div class="card-header">
-                            <p class="card-text">Welcome to our website.</p>
-                        </div>
-                        <div class="card-body">
-                            <p class="card-title font-normal">Buy heroin.</p>
-                            <p class="card-text">
-                                Lorem ipsum dolor sit, amet consectetur
-                                adipisicing elit. Nulla, suscipit.
-                            </p>
-                        </div>
-                        <div class="card-footer">
-                            <p class="card-text">3 hours ago</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-4">
-                    <div class="card-dark">
-                        <div class="card-header">
-                            <p class="card-text">Welcome to our website.</p>
-                        </div>
-                        <div class="card-body">
-                            <p class="card-title">Buy heroin.</p>
-                            <p class="card-text">
-                                Lorem ipsum dolor sit, amet consectetur
-                                adipisicing elit. Nulla, suscipit.
-                            </p>
-                        </div>
-                        <div class="card-footer">
-                            <p class="card-text">3 hours ago</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-4">
-                    <div class="card-danger">
-                        <div class="card-header">
-                            <p class="card-text">Welcome to our website.</p>
-                        </div>
-                        <div class="card-body">
-                            <p class="card-title">Buy heroin.</p>
-                            <p class="card-text">
-                                Lorem ipsum dolor sit, amet consectetur
-                                adipisicing elit. Nulla, suscipit.
-                            </p>
-                        </div>
-                        <div class="card-footer">
-                            <p class="card-text">3 hours ago</p>
-                        </div>
-                    </div>
-                </div>
+                <div class="col-4 h-50 bg-danger"></div>
+                <div class="col-4 h-50 bg-success"></div>
+                <div class="col-4 h-50 bg-warning"></div>
+                <div class="col-4 h-50 bg-info"></div>
             </div>
         </div>
     </body>
